...
            android:layout_width="@dimen/dp_124"
            android:layout_height="@dimen/dp_124"
            app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp"
            app:tint="@color/material_on_background_emphasis_medium" />

        <TextView
            android:id="@+id/empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@{stateHolder.emptyText}"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/material_on_background_emphasis_medium"
...
