...
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/text_build_branch"
        android:textAppearance="?attr/textAppearanceBody1" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_branches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_default_build_branch"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:lines="1"
...
        android:text="@string/text_no_branches_available"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_no_branches_available_to_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/text_no_branches_available_to_filter"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/material_on_background_emphasis_medium"
...
